 * pyReScene Auto: SRRs for vobsubs path bug fixed and optional switch added
 * pyReScene Auto: stored SRR and RAR files above their SFV in list
 * pyReScene Auto: crash fixed when path of SRR to create was too long
 * pyReScene Auto: failed to create SRRs when 'subs' was found in file names
 * pyReScene Auto: --best option added (same as -c -s -v)
 * ReSample: MemoryError on large MP4s fixed and 
             skipping crc32 calculation when possible
 * ReSample: KeyError fixed for RIFF mp3
 * ReSample: construct SRS for some bad MP3 files too + print warning
 * ReSample: "OverflowError: Python int too large to convert to C long"
             on a bad MP3 file fixed
 * ReScene: SRR was stored in subfolder instead of output folder
 * ReScene: Reconstruction error fixed (when unpack size is set to 4294967295)
 * ReScene: -x and -d extracts to folder named after .srr in the output path

pyReScene 0.5.1 (2013-07-14)
===============

 * "SRRs for vobsubs" is disabled due to a bug.

pyReScene 0.5 (2013-07-14)
=============

 * ReScene: initialization bug fixed (compressed RARs issue)
 * ReScene: choosing correct dictionary size while reconstructing
 * ReScene: able to reconstruct RAR 2.0x archives
 * ReScene: solid archives fix (threading issue)
 * ReScene: fix for archives larger than 4GB
 * ReScene: support for compression failures
            (larger packed size than unpacked size)
 * ReScene: provided -t folder does not need to be empty
 * ReScene: support for padding at the end of the RAR files
            Never.on.Sunday.1960.DVDRip.XviD-AEN and recent DAA, Ltu releases
 * ReScene: don't leave a broken SRR file when a 0-byte RAR file is encountered
 * ReScene: -r parameter to locate renamed files when using  -q, --verify
 * ReSample: FLAC and MP3 support: backing up tags to SRS file
             + AcoustID fingerprint and duration
          	 MP3 tags: ID3v1, ID3v2, Lyrics3v1, Lyrics3v2, APEv1, APEv2